--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,9 @@
   "description": "A Simple To-Do List Browser Extension",
   "version": "1.0",
   "manifest_version": 3,
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
     "default_popup": "popup.html"
   }
